<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/link_text_material_light"
    tools:context="com.letsgo.GettingStarted">
<TextView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:text="Get started in four easy steps"
    android:textStyle="bold"
    android:textSize="@dimen/abc_text_size_title_material"
    android:gravity="center_horizontal"
    android:layout_marginTop="12dp"
    />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="60dp">
        <TableRow
            android:layout_marginTop="15dp"
            android:layout_gravity="center_horizontal"
            >
            <TextView
                android:text="@string/create"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                />
        </TableRow>

        <TableRow>
                <TextView
                android:text="@string/create1"
                android:textSize="15sp"
                android:textStyle="italic"
                android:layout_gravity="center_horizontal"

                />
        </TableRow>


        <TableRow
            android:layout_marginTop="15dp"
            android:layout_gravity="center_horizontal">
            <TextView
                android:text="@string/fill_travel_details"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                />
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/fill_travel_details1"
                android:textSize="15sp"
                android:layout_gravity="center_horizontal"
                android:textStyle="italic"
                />
        </TableRow>

        <TableRow
            android:layout_marginTop="15dp"
            android:layout_gravity="center_horizontal">
            <TextView
                android:text="@string/you_can_travel_with"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_gravity="center_horizontal"
                />
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/you_can_travel_with1"
                android:textSize="15sp"
                android:textStyle="italic"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                />
        </TableRow>

        <TableRow
            android:layout_marginTop="15dp"
            android:layout_gravity="center_horizontal">
            <TextView
                android:text="@string/chat_safe"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                />
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/chat_safe1"
                android:textSize="15sp"
                android:textStyle="italic"
                android:layout_gravity="center_horizontal"
                />
        </TableRow>
        <TableRow
            android:layout_marginTop="100dp">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/getstarted"
                android:id="@+id/getStarted" />

        </TableRow>
        <TableRow>
            <ImageView
                android:layout_width="wrap_content"
                android:src="@drawable/car"
                android:layout_height="40dp"
                android:layout_gravity="center"

                />

        </TableRow>
    </TableLayout>


</RelativeLayout>
