<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@android:color/black"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".CreateProfile">

    <TextView android:text="@string/createprofile" android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:layout_gravity="center_horizontal" android:textSize="29sp" android:textColor="@color/abc_primary_text_disable_only_material_dark"/>
    <TextView android:text="@string/tellus" android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:layout_gravity="center_horizontal" android:textSize="18sp" android:textColor="@color/abc_primary_text_disable_only_material_dark"/>

    <TableLayout
        android:layout_marginTop="40dp"
        android:layout_width="270dp"
        android:layout_height="270dp"
        android:stretchColumns="0"
        android:layout_gravity="center_horizontal"
        android:background="@color/background_floating_material_light">

        <!-- Seeker Section-->

        <TableRow
            android:layout_width="@dimen/abc_button_inset_horizontal_material"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button android:layout_gravity="center_horizontal" android:text="@string/seeker" android:textSize="22sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:elegantTextHeight="true"
                android:clickable="true"
                android:id="@+id/seeker">
             </Button>

        </TableRow>

        <TableRow
            android:layout_width="@dimen/abc_button_inset_horizontal_material"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <TextView
                android:layout_gravity="center_horizontal"
                android:text="@string/seekersubtext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </TextView>
        </TableRow>

        <TableRow
            android:layout_width="@dimen/abc_button_inset_horizontal_material"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView android:text="@string/dummyline"
                android:layout_gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </TextView>

        </TableRow>

        <!-- Car Owner Section-->

        <TableRow
            android:layout_width="@dimen/abc_button_inset_horizontal_material"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button android:layout_gravity="center_horizontal" android:text="@string/vehicleowner" android:textSize="22sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:elegantTextHeight="true"
                android:clickable="true"
                android:id="@+id/owner">
            </Button>

        </TableRow>

        <TableRow
            android:layout_width="@dimen/abc_button_inset_horizontal_material"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <TextView
                android:layout_gravity="center_horizontal"
                android:text="@string/ownersubtext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </TextView>
        </TableRow>

        <TableRow
            android:layout_width="@dimen/abc_button_inset_horizontal_material"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView android:text="@string/dummyline"
                android:layout_gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </TextView>

        </TableRow>

        <!-- Travel Agency Section-->

        <TableRow
            android:layout_width="@dimen/abc_button_inset_horizontal_material"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button android:layout_gravity="center_horizontal" android:text="@string/agency" android:textSize="22sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:elegantTextHeight="true"
                android:clickable="true"
                android:id="@+id/agency">
            </Button>

        </TableRow>

        <TableRow
            android:layout_width="@dimen/abc_button_inset_horizontal_material"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <TextView
                android:layout_gravity="center_horizontal"
                android:text="@string/agencysubtext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </TextView>
        </TableRow>

        <TableRow
            android:layout_width="@dimen/abc_button_inset_horizontal_material"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView android:text="@string/dummyline"
                android:layout_gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </TextView>

        </TableRow>


    </TableLayout>

    <TextView android:text="@string/note" android:layout_width="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content" android:layout_gravity="center_horizontal" android:textSize="14sp" android:textColor="@color/abc_primary_text_disable_only_material_dark"/>


        <ImageView
            android:layout_width="wrap_content"
            android:src="@drawable/car"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginBottom="15dp"
            />

</LinearLayout>
