<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@android:color/black"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context="com.letsgo.Signup">

    <TextView android:text="@string/lookingfor"
        android:layout_width="wrap_content" android:layout_marginTop="40dp"
        android:layout_height="wrap_content" android:layout_gravity="center_horizontal" android:textSize="29sp" android:textColor="@color/abc_primary_text_disable_only_material_dark"
        android:id="@+id/txtLookingFor" />
    <TextView android:text="@string/loginnote" android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:layout_gravity="center_horizontal" android:textSize="18sp" android:textColor="@color/abc_primary_text_disable_only_material_dark"/>

    <TableLayout
        android:layout_marginTop="40dp"
        android:layout_width="280dp"
        android:layout_height="150dp"
        android:stretchColumns="0"
        android:layout_gravity="center_horizontal"
        android:background="@android:color/black">

        <TableRow
            android:layout_width="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="15dp">
            <ImageView
                android:layout_gravity="center_horizontal"
                android:src="@drawable/googlelogin"
                android:layout_width="280dp"
                android:layout_height="50dp"
                android:scaleType="fitCenter"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:clickable="true"
                android:id="@+id/btnGoogleSignup">

            </ImageView>

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">
            <ImageView
                android:layout_gravity="center_horizontal"
                android:src="@drawable/fblogin"
                android:layout_height="50dp"
                android:layout_width="280dp"
                android:scaleType="fitCenter"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:clickable="true"
                android:id="@+id/btnFbSignup">

            </ImageView>

        </TableRow>

    </TableLayout>



    <TextView android:text="@string/whynotemail" android:layout_width="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_height="wrap_content" android:layout_gravity="center_horizontal" android:textSize="14sp" android:textColor="@color/abc_primary_text_disable_only_material_dark"/>

    <TextView android:text="@string/whynotemail_details" android:layout_width="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content" android:layout_gravity="center_horizontal" android:textSize="14sp" android:textColor="@color/abc_primary_text_disable_only_material_dark"/>

    <TextView android:text="@string/wedontpost" android:layout_width="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_height="wrap_content" android:layout_gravity="center_horizontal" android:textSize="14sp" android:textColor="@color/abc_primary_text_disable_only_material_dark"/>

        <ImageView
            android:layout_width="wrap_content"
            android:src="@drawable/car"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginBottom="15dp"

            />


</LinearLayout>
