<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.letsgo.create_seeker_profile"
    android:background="@android:color/holo_blue_light">

<TableLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="horizontal">
    <TableRow>
        <TextView
            android:text=" FROM (ORIGIN) : "
            android:layout_gravity="left"
            android:textSize="15dp"
            android:textStyle="bold"
            />
    </TableRow>
    <TableRow>
        <AutoCompleteTextView
            android:id="@+id/textFrom"
            android:layout_gravity="left"
            android:textSize="20dp"
            android:textStyle="normal"
            android:inputType="text"
            android:hint="@string/from_hint"
            />
    </TableRow>

    <TableRow>
        <TextView
            android:text=" TO (DESTINATION) : "
            android:layout_gravity="left"
            android:textSize="15dp"
            android:textStyle="bold"
            />
    </TableRow>
    <TableRow>
        <AutoCompleteTextView
            android:id="@+id/textTo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="left"
            android:textSize="20dp"
            android:textStyle="normal"
            android:inputType="text"
            android:hint="@string/to_hint"
            />
    </TableRow>

    <TableRow>
        <TextView
            android:text=" DATE OF JOURNEY :"
            android:layout_gravity="left"
            android:textSize="15dp"
            android:textStyle="bold"
                />
    </TableRow>

    <TableRow>

        <EditText
            android:id="@+id/textDOJ"
            android:layout_gravity="left"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="20dp"
            android:clickable="true"
            android:editable="false"
            />


    </TableRow>
    <TableRow>
        <TextView
            android:text="Descrption"
            android:layout_gravity="left"
            android:textSize="15dp"
            android:textStyle="bold"
            />
    </TableRow>

    <TableRow>

        <EditText
            android:id="@+id/textDesc"
            android:layout_gravity="left"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:hint="tell us more about your requirements"
            />


    </TableRow>

    <TableRow>

        <TextView
            android:layout_gravity=""
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/finewithbus"
            />
        <ToggleButton
            android:id="@+id/togglebtnBus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOn="Yes"
            android:textOff="No"
            android:checked="true"
            android:layout_alignRight="@+id/finewithbus"
            android:layout_alignEnd="@+id/finewithbus"
            android:text="Yes"
        />
    </TableRow>


</TableLayout>


</LinearLayout>
